--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,3 +18,6 @@ jobs:
       run: |
         docker-compose -f docker-compose.yml build
         docker-compose -f docker-compose.yml up -d
+    - name: Test MySQL service
+      run: |
+        docker-compose -f docker-compose.yml exec mysqldb sh -c "mysql -uroot -proot -e 'SELECT 1;'"
