fixing the ci/cd

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,15 +9,21 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build and run with Docker Compose
-      run: |
-        docker-compose -f docker-compose.yml build
-        docker-compose -f docker-compose.yml up -d
-    - name: Test MySQL service
-      run: |
-        docker-compose -f docker-compose.yml exec mysqldb sh -c "mysql -uroot -proot -e 'SELECT 1;'"
+      - uses: actions/checkout@v4
+      - name: Build with Docker Compose
+        run: docker-compose -f docker-compose.yml build
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Start services with Docker Compose
+        run: docker-compose -f docker-compose.yml up -d
+      - name: Test MySQL service
+        run: |
+          docker-compose -f docker-compose.yml exec -T mysqldb sh -c "mysql -uroot -proot -e 'SELECT 1;'"
+      - name: Stop services
+        run: docker-compose -f docker-compose.yml down
